Grease Pencil dont create a drawing in current frame less than 1 #36831

Closed
opened 2013-09-27 22:06:21 +02:00 by alexis echemendia · 5 comments

%%%--- Operating System, Graphics card ---
Windows 7 64 bits Ultimate
Nvidia Gforce 9800 gt

- Blender version with error, and version that worked ---

Blender 2.68a

- Short description of error ---

Grease Pencil dont create a drawing in current frame less than 1.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

1- Open Blender.
2- Position the current frame in 0 or a negative frame, to start a draw in this frame.
3- Begin to draw with grease pencil.
4- The drawing always appears in frame 1 when I check in DopeSheet in Grease Pencil Mode.

%%%

%%%--- Operating System, Graphics card --- Windows 7 64 bits Ultimate Nvidia Gforce 9800 gt - Blender version with error, and version that worked --- Blender 2.68a - Short description of error --- Grease Pencil dont create a drawing in current frame less than 1. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1- Open Blender. 2- Position the current frame in 0 or a negative frame, to start a draw in this frame. 3- Begin to draw with grease pencil. 4- The drawing always appears in frame 1 when I check in DopeSheet in Grease Pencil Mode. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Is using frame 0 or a negative frame # a common workflow? I am not familiar with the reason for this workflow. Could you please explain why you would want to draw on frame 0 or a negative frame # and if it is common for other people to do the same?

This will also help in understanding how to do a proper fix if this is a workflow that needs to be accommodated.

Just for reference, I can crash Blender and most other programs when I do some unorthodox workflows. But IMHO I don't consider that a bug in Blender or other programs. I consider that a warning not to do unorthodox workflows. ; )

Thanks.

%%%

%%%Is using frame 0 or a negative frame # a common workflow? I am not familiar with the reason for this workflow. Could you please explain why you would want to draw on frame 0 or a negative frame # and if it is common for other people to do the same? This will also help in understanding how to do a proper fix if this is a workflow that needs to be accommodated. Just for reference, I can crash Blender and most other programs when I do some unorthodox workflows. But IMHO I don't consider that a bug in Blender or other programs. I consider that a warning not to do unorthodox workflows. ; ) Thanks. %%%

%%% In blender is possible add a key in a lot of properties and objects in DopeSheet in any frame don't matters it is neggative or positive or cero frame. Why eliminates the possibilities of add grease pencil drawing in frames less than 1??, for me this is a bug, all other properties is possible unless this. The workflows need to be flexible to other situation.

Example: suppose that I have a blocking pease off animation starting in frame 1, but I want to see what would be the previous motion of the character, and decided to draw with grease pencil in negative frame, that is a problem because I need to move all the frame forward. That is an example why I thinks this is importart. Sorry is this is not a bug :)%%%

%%% In blender is possible add a key in a lot of properties and objects in DopeSheet in any frame don't matters it is neggative or positive or cero frame. Why eliminates the possibilities of add grease pencil drawing in frames less than 1??, for me this is a bug, all other properties is possible unless this. The workflows need to be flexible to other situation. Example: suppose that I have a blocking pease off animation starting in frame 1, but I want to see what would be the previous motion of the character, and decided to draw with grease pencil in negative frame, that is a problem because I need to move all the frame forward. That is an example why I thinks this is importart. Sorry is this is not a bug :)%%%

%%%Fixed in r60412, now neg framed are only forbidden when this is the case for the whole Blender (userpref setting). Thanks for the report.%%%

%%%Fixed in r60412, now neg framed are only forbidden when this is the case for the whole Blender (userpref setting). Thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36831
No description provided.