Fix [#36831] Grease Pencil dont create a drawing in current frame less than 1

Only forbid negframes when user has not allowed them in whole Blender (userpref, editing). Else, it's more than annoying to not be able to draw negframed gpencil.